frontend/counter-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-frontend
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: counter-frontend
